syntax = "proto3";

option java_package = "grpc.smartOffice";
option java_multiple_files = true;
option java_outer_classname = "PrinterProto";

service printer {

	//unary rpc
	rpc print(containsPrintJob) returns (confirmationMessage){}


	//server-side streaming rpc
	rpc getPrinterUpdate(containsRequest) returns (stream printerStatus){}

}

message containsPrintJob {
	string content = 1;
	int32 quantity = 2;
	string staples = 3;
}

message confirmationMessage{
	string confirmation = 1;
}

message containsRequest{
	string request = 1;
}

message printerStatus{
	string responseMessage = 1;
}